fix jumping navigation bar when switching pages, css

--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,7 @@ body {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.6;
+  overflow-y: scroll; 
 }
 
 h1 {
